Ajout SOAP services